# MCGS

./: .clang-format  .clang-tidy  .clang-tidy-headers  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  MCGS.html  MCGS_ui.js  README.md  README_new.md  _clangFormatConfig  _clangTidyConfig  all_game_headers.h  all_game_types.test  alternating_move_game.cpp  alternating_move_game.h  autotests.cpp  autotests.h  cgt_basics.h  cgt_dyadic_rational.cpp  cgt_dyadic_rational.h  cgt_game.h  cgt_integer_game.cpp  cgt_integer_game.h  cgt_move.cpp  cgt_move.h  cgt_nimber.cpp  cgt_nimber.h  cgt_switch.cpp  cgt_switch.h  cgt_up_star.cpp  cgt_up_star.h  clangFormatConfig  clangTidyCOnfig  clangTidyConfig  cli_options.cpp  cli_options.h  clobber-solver-algorithm.txt  clobber_1xn.cpp  (+83 more)
db_prototyping/: .gitignore  makefile  serialization_test.cpp
docs/: 6x6clobber.html  MCGS-results.html  README_old.md  db-plan.md  db-planning.txt  development-notes.md  game-simplification-planning.txt  index.html  snippets  style.md  style.txt  todo.md
docs/temp/: hashing-planning.txt
experiments/acg_2025/: diagram.py  experiments.sh  instructions.txt  runtests.py
fail/: test.test
input/: all_game_types.test  bug.test  clobber_1xn.test  elephants.test  info.test  nim.test  old_info.test  simple.test  test.test
input/20_seconds/: strips.test
input/amazons/: 3x4.test  3x4_imp.test  make_test.sh
input/bug/: bug.test
input/cannibal_clobber/: cannibal_clobber_1xn.test  cannibal_clobber_easy.test  cannibal_clobber_medium.test
input/clobber/: clobber_2xn_large.test  clobber_easy.test  clobber_hard.test  clobber_medium.test  clobber_unsolved.test  clobber_very_hard.test
input/clobber_1xn/: clobber_1xn.test
input/clobber_1xn_autotests/: clobber_1xn_le_24_moves.test  clobber_1xn_le_30_moves.test  clobber_1xn_le_36_moves.test  clobber_1xn_le_38_moves.test  clobber_1xn_le_40_moves.test  clobber_1xn_le_48_moves.test  clobber_1xn_le_50_moves.test  clobber_1xn_le_52_moves.test  clobber_1xn_le_6_moves.test  clobber_1xn_le_8_moves.test
input/clobber_new_hard/: random_filled_hard.test
input/domineering/: 4x4_easy.test  6x6.test  7x7_15_stones.test
input/elephants_autotests/: elephants_hard.test  elephants_hard_negations.test
input/fission/: make_test.sh
input/game-sources/: clobber_6x6_10games.txt
input/gen_king_dirt/: 3x3_110.test  3x3_111.test  3x3_220.test  4x4_111.test
input/gen_toads/: gen_toads_1230.test  gen_toads_1321.test  gen_toads_2320.test  make_test.sh
input/gen_toads_unused/: gen_toads.test  gen_toads_bwn.test  gen_toads_imp.test
input/hard/: all_game_types_harder.test  clobber_1xn_le_16_moves.test  clobber_1xn_le_18_moves.test  clobber_1xn_le_20_moves.test  clobber_1xn_le_22_moves.test  clobber_1xn_le_24_moves.test  clobber_1xn_le_26_moves.test  clobber_1xn_le_28_moves.test  clobber_1xn_le_30_moves.test  clobber_1xn_le_32_moves.test  clobber_1xn_le_34_moves.test  clobber_1xn_le_36_moves.test  clobber_1xn_le_38_moves.test  clobber_1xn_le_40_moves.test  clobber_1xn_le_42_moves.test  clobber_1xn_le_44_moves.test  clobber_1xn_le_46_moves.test  clobber_1xn_le_48_moves.test  clobber_1xn_le_50_moves.test  clobber_1xn_le_52_moves.test  clobber_1xn_le_54_moves.test  clobber_dai_chen_hard.test  elephants_negations.test  kayles_bw_hard.test  nogo_1xn_empty_hard.test
input/illegal/: nogo_from_1xn_filled.test
input/impartial/: impartial_clobber.test  impartial_clobber_random_1xn_le_2-14.test
input/impartial-hard/: impartial_clobber_hard.test
input/large_clobber_gh_test/: 4x5.test  5x4.test  5x5.test
input/medium/: strips_20s.test
input/misc_autotests/: misc.test
input/nogo_1xn_autotests/: nogo_1xn_empty.test
input/perf/: perf.test
input/random/: random-integers.test  random-nimbers.test  random-switches.test
input/sheep/: sheep2.test
input/temp/: clobber-6x6_game8_move2.test  clobber_unsolved.test
input/therm_tests/: nogo-1xn-empty.test  rand-domineering.test  rand-nogo_1xn.test
input/toppling_dominoes/: make_test.sh  td_20_imp.test  td_30.test  (+5 more)
main/: main.cpp
perf_tests/: xo.test
random/: random.test
random_input/: random-rationals-integers.test  random-simplify.test  switch.test
src/: all_game_headers.h  alternating_move_game.cpp  alternating_move_game.h  amazons.cpp  amazons.h  asan_options.cpp  autotests.cpp  autotests.h  basic_player.cpp  basic_player.h  bit_array.cpp  bit_array.h  bounding_box.cpp  bounding_box.h  bounds.cpp  bounds.h  bounds2.cpp  bounds2.h  bounds_finder.cpp  bounds_finder.h  call_with_timeout.cpp  call_with_timeout.h  cannibal_clobber.cpp  cannibal_clobber.h  cannibal_clobber_move.cpp  cannibal_clobber_move.h  cgt_basics.cpp  cgt_basics.h  cgt_dyadic_rational.cpp  cgt_dyadic_rational.h  cgt_game.cpp  cgt_game.h  cgt_game_simplification.cpp  cgt_game_simplification.h  cgt_integer_game.cpp  cgt_integer_game.h  cgt_move.cpp  cgt_move.h  cgt_move_new.cpp  cgt_move_new.h  (+316 more)
test/: amazons_test.cpp  amazons_test.h  amazons_test_move_strings_big.cpp_fragment  bit_array_test.cpp  bit_array_test.h  cannibal_clobber_test.cpp  cannibal_clobber_test.h  cgt_basics_test.cpp  cgt_basics_test.h  cgt_dyadic_rational_test.cpp  cgt_dyadic_rational_test.h  cgt_game_simplification_test.cpp  cgt_game_simplification_test.h  cgt_game_test.cpp  cgt_game_test.h  cgt_integer_game_test.cpp  cgt_integer_game_test.h  cgt_move_test.cpp  cgt_move_test.h  cgt_nimber_test.cpp  cgt_nimber_test.h  cgt_switch_test.cpp  cgt_switch_test.h  cgt_up_star_test.cpp  cgt_up_star_test.h  cli_options_test.cpp  cli_options_test.h  clobber_1xn_test.cpp  clobber_1xn_test.h  clobber_test.cpp  clobber_test.h  custom_traits_test.cpp  custom_traits_test.h  database_test.cpp  database_test.h  db_game_generator_test.cpp  db_game_generator_test.h  domineering_test.cpp  domineering_test.h  elephants_test.cpp  (+176 more)
utils/: alternating-grid.py  commits.py  format-chunk.py  format-files.py  generate-random-input.py  generate_test_results.py  make_test_stubs.py  nogo_test.py  project_paths.py  random-filled-grid.py  random-grid.py  random-input-file.py  random-strip.py  random_strip.py
(+406 files in other folders)
